added sending notifications